@@ -1,3 +1,7 @@
+2000-08-13  Harlan Stenn  <stenn@whimsy.udel.edu>
+
+	* util/ntp-genkeys.c (main): More small steps...
+
 2000-08-12  Harlan Stenn  <stenn@whimsy.udel.edu>
 
 	* util/ntp-genkeys.c (main): Another small step...
